<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_100dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_5dp"
                    android:text="@string/change_photo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editperson_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="User Name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="@string/website"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="@string/bio"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:maxLength="10" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
