<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Mobile_Verification_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120dp"
                android:background="@drawable/waves"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/wait_for_the_code_i_sent_you"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressbar"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/_10dp"
                    android:digits="0123456789"
                    android:hint="@string/enter_verification_code"
                    android:inputType="phone"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/continues"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/waves"
                android:contentDescription="@string/todo" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>