<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10dp"
    card_view:cardCornerRadius="@dimen/_5dp"
    card_view:contentPadding="@dimen/_10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/may_i_ask_your_phone_number"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:digits="0123456789"
                    android:hint="@string/enter_your_mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/_5dp"
                android:text="@string/continues"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>